--- a/mscore/textproperties.ui
+++ b/mscore/textproperties.ui
@@ -625,7 +625,7 @@
               </sizepolicy>
              </property>
              <property name="text">
-              <string>Relative X:</string>
+              <string>% horizontal</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -702,7 +702,7 @@
               </sizepolicy>
              </property>
              <property name="text">
-              <string>Relative Y:</string>
+              <string>% vertical:</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
