fix textpalette crash; update ottava types in inspector
Former-commit-id: 3cb729bef4c92957bf23c0c7c236c2db79fd3df8

--- a/mscore/inspector/inspector_ottava.ui
+++ b/mscore/inspector/inspector_ottava.ui
@@ -119,6 +119,16 @@
          <string>15mb</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>22ma</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>22mb</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item row="1" column="1">
