remove header in instrument list
Former-commit-id: 95daba28787515c2946aa2baf87f3b3484c48ad7

--- a/mscore/instrdialog.ui
+++ b/mscore/instrdialog.ui
@@ -62,6 +62,9 @@
          <property name="columnCount">
           <number>1</number>
          </property>
+         <attribute name="headerVisible">
+          <bool>false</bool>
+         </attribute>
          <column>
           <property name="text">
            <string>Instrument List</string>
