Selectable lyrics import
Former-commit-id: 535b593af7ae12f3433a9e1363515721c32be397

--- a/mscore/importmidi_panel.ui
+++ b/mscore/importmidi_panel.ui
@@ -203,6 +203,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::CurrentChanged|QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
+       </property>
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
@@ -222,6 +225,9 @@
        </property>
        <property name="editTriggers">
         <set>QAbstractItemView::CurrentChanged|QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
+       </property>
+       <property name="tabKeyNavigation">
+        <bool>true</bool>
        </property>
        <property name="alternatingRowColors">
         <bool>true</bool>
