Implement <genre> tags in instruments.xml file. Initial commit
Former-commit-id: 926a67d9cdd4ac2ac457aa019c0fcd72a4890908

--- a/mscore/instrdialog.ui
+++ b/mscore/instrdialog.ui
@@ -37,6 +37,9 @@
      <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
+        <widget class="QComboBox" name="InstrumentGenreFilter"/>
+       </item>
+       <item>
         <widget class="QTreeWidget" name="instrumentList">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
