--- a/mscore/playpanel.ui
+++ b/mscore/playpanel.ui
@@ -900,6 +900,9 @@
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
+       <property name="buttonSymbols">
+        <enum>QAbstractSpinBox::NoButtons</enum>
+       </property>
        <property name="prefix">
         <string/>
        </property>
