don't use non-existent musicxml tag for d cl
Former-commit-id: 838a1e4b4e2f2563a3ca053cd07df51db25dec98

--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -1508,7 +1508,7 @@
                   <longName>D Clarinet</longName>
                   <shortName>D Cl.</shortName>
                   <description>D Clarinet</description>
-                  <musicXMLid>wind.reed.clarinet.d</musicXMLid>
+                  <musicXMLid>wind.reed.clarinet</musicXMLid>
                   <clef>G</clef>
                   <barlineSpan>1</barlineSpan>
                   <aPitchRange>54-93</aPitchRange>
