fix 22896: add character set selection for guitar pro import
Former-commit-id: 7917a380ca24c0e3f39b07aa875f0170d328e77d

--- a/mscore/prefsdialog.ui
+++ b/mscore/prefsdialog.ui
@@ -2361,34 +2361,35 @@
        <item>
         <widget class="QGroupBox" name="groupBox_20">
          <property name="title">
-          <string>Character Set used when import non-unicode strings. (For binary file import)</string>
+          <string>Character set used when importing binary files</string>
          </property>
          <property name="flat">
           <bool>false</bool>
          </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_8">
+         <layout class="QVBoxLayout" name="verticalLayout_12">
           <item>
-           <widget class="QLabel" name="label_49">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string>Character Set:</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="importCharsetList">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-           </widget>
+           <layout class="QFormLayout" name="formLayout">
+            <item row="2" column="0">
+             <widget class="QLabel" name="label_49">
+              <property name="text">
+               <string>Overture import character set:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1">
+             <widget class="QComboBox" name="importCharsetListOve"/>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label_23">
+              <property name="text">
+               <string>Guitar Pro import character set:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QComboBox" name="importCharsetListGP"/>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
