Editable combo box for charset selection (MIDI import panel)
Former-commit-id: 48fffa9c08d740a16fa2bb8d682e490570f1dcf7

--- a/mscore/importmidi_panel.ui
+++ b/mscore/importmidi_panel.ui
@@ -88,7 +88,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>60</width>
+            <width>40</width>
             <height>20</height>
            </size>
           </property>
@@ -173,6 +173,15 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="minimumSize">
+           <size>
+            <width>150</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="editable">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
         <item>
@@ -182,7 +191,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>60</width>
+            <width>40</width>
             <height>20</height>
            </size>
           </property>
