--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -8587,6 +8587,7 @@
                   <Channel>
                         <program value="32"/>
                   </Channel>
+                  <genre>common</genre>
                   <genre>jazz</genre>
             </Instrument>
             <Instrument id="electric-bass">
