--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -124,6 +124,7 @@
       <file>data/icons/media-playback-loop-in.svg</file>
       <file>data/icons/media-playback-loop-out.svg</file>
       <file>data/icons/media-playback-metronome.svg</file>
+      <file>data/icons/media-playback-countin.svg</file>
       <file>data/icons/align-vertical-baseline.svg</file>
       <file>data/icons/go-home.svg</file>
       <file>data/icons/go-next.svg</file>
