--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -129,6 +129,7 @@
         <file>data/icons/media-playback-loop-in.svg</file>
         <file>data/icons/media-playback-loop-out.svg</file>
         <file>data/icons/media-playback-metronome.svg</file>
+        <file>data/icons/media-playback-countin.svg</file>
         <file>data/icons/midi-input.svg</file>
         <file>data/icons/media-playback-pan.svg</file>
         <file>data/icons/media-playback-repeats.svg</file>
