fix #23219 (spelling errors)
Former-commit-id: e3413be7c68e49a00dc4abb201511ab5e920897d

--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -256,7 +256,7 @@
                <item row="2" column="0">
                 <widget class="QLabel" name="label_16">
                  <property name="text">
-                  <string>Minumum width of measure:</string>
+                  <string>Minimum width of measure:</string>
                  </property>
                 </widget>
                </item>
