--- a/mscore/masterpalette.ui
+++ b/mscore/masterpalette.ui
@@ -62,7 +62,7 @@
      </item>
      <item>
       <property name="text">
-       <string>Breath &amp; Pauses</string>
+       <string>Breaths &amp; Pauses</string>
       </property>
      </item>
      <item>
