fix #23366 2nd batch
Almost certainly a 3rd batch to follow, for many of the CamelCase
strings


Former-commit-id: 0712881919ae0ba722e75fa35c524e389f40b721

--- a/mscore/inspector/inspector_timesig.ui
+++ b/mscore/inspector/inspector_timesig.ui
@@ -72,7 +72,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>timesig</string>
+        <string>time sig.</string>
        </property>
       </widget>
      </item>
@@ -161,7 +161,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>global timesig</string>
+        <string>global time sig.</string>
        </property>
       </widget>
      </item>
