--- a/mscore/chordedit.ui
+++ b/mscore/chordedit.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MuseScore: Harmony Properties</string>
+   <string>MuseScore: Chord Name Properties</string>
   </property>
   <layout class="QGridLayout">
    <item row="0" column="0" colspan="2">
