--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -172,7 +172,7 @@
    <item row="0" column="1">
     <widget class="QStackedWidget" name="pageStack">
      <property name="currentIndex">
-      <number>14</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="Page1">
       <layout class="QVBoxLayout" name="verticalLayout_20">
@@ -210,6 +210,11 @@
               <item>
                <property name="text">
                 <string notr="true">Gonville</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Bravura</string>
                </property>
               </item>
              </widget>
