--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -8,10 +8,19 @@
         <file>data/paper4.png</file>
         <file>data/paper5.png</file>
         <file>data/table.svg</file>
-        <file alias="/fonts/mscore20.xml">../fonts/mscore20.xml</file>
-        <file alias="fonts/gonville.xml">../fonts/gonville.xml</file>
-        <file alias="fonts/gonville-20.ttf">../fonts/gonville-20.ttf</file>
-        <file alias="fonts/mscore-20.ttf">../fonts/mscore-20.ttf</file>
+
+        <file alias="fonts/mscore/mscore-20.ttf">../fonts/mscore/mscore-20.ttf</file>
+        <file alias="/fonts/mscore/mscore20.xml">../fonts/mscore/mscore20.xml</file>
+        <file alias="/fonts/mscore/glyphnames.json">../fonts/mscore/glyphnames.json</file>
+        <file alias="/fonts/mscore/metadata.json">../fonts/mscore/metadata.json</file>
+
+        <file alias="fonts/gonville/gonville-20.ttf">../fonts/gonville/gonville-20.ttf</file>
+        <file alias="fonts/gonville/gonville.xml">../fonts/gonville/gonville.xml</file>
+
+        <file alias="fonts/bravura/Bravura.otf">../fonts/bravura/Bravura.otf</file>
+        <file alias="fonts/bravura/metadata.json">../fonts/bravura/bravura_metadata.json</file>
+        <file alias="fonts/bravura/glyphnames.json">../fonts/bravura/glyphnames.json</file>
+
         <file alias="fonts/MuseJazz.ttf">../fonts/MuseJazz.ttf</file>
         <file alias="fonts/FreeSerifMscore.ttf">../fonts/FreeSerifMscore.ttf</file>
         <file alias="fonts/FreeSerifBold.ttf">../fonts/FreeSerifBold.ttf</file>
@@ -20,7 +29,7 @@
         <file alias="fonts/mscoreTab.ttf">../fonts/mscoreTab.ttf</file>
         <file alias="fonts/fonts_figuredbass.xml">../fonts/fonts_figuredbass.xml</file>
         <file alias="fonts/mscore-BC.ttf">../fonts/mscore-BC.ttf</file>
-        <file alias="fonts/Bravura.otf">../fonts/bravura/Bravura.otf</file>
+
         <file alias="data/instruments.xml">../share/templates/instruments.xml</file>
         <file>data/splash.jpg</file>
         <file alias="data/Promenade_Example.mscz">../demos/promenade.mscz</file>
