--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -10,16 +10,16 @@
         <file>data/table.svg</file>
 
         <file alias="fonts/mscore/mscore-20.ttf">../fonts/mscore/mscore-20.ttf</file>
-        <file alias="/fonts/mscore/mscore20.xml">../fonts/mscore/mscore20.xml</file>
         <file alias="/fonts/mscore/glyphnames.json">../fonts/mscore/glyphnames.json</file>
         <file alias="/fonts/mscore/metadata.json">../fonts/mscore/metadata.json</file>
 
         <file alias="fonts/gonville/gonville-20.ttf">../fonts/gonville/gonville-20.ttf</file>
-        <file alias="fonts/gonville/gonville.xml">../fonts/gonville/gonville.xml</file>
+        <file alias="/fonts/gonville/glyphnames.json">../fonts/gonville/glyphnames.json</file>
+        <file alias="/fonts/gonville/metadata.json">../fonts/gonville/metadata.json</file>
 
         <file alias="fonts/bravura/Bravura.otf">../fonts/bravura/Bravura.otf</file>
-        <file alias="fonts/bravura/metadata.json">../fonts/bravura/bravura_metadata.json</file>
         <file alias="fonts/bravura/glyphnames.json">../fonts/bravura/glyphnames.json</file>
+        <file alias="fonts/bravura/metadata.json">../fonts/bravura/metadata.json</file>
 
         <file alias="fonts/MuseJazz.ttf">../fonts/MuseJazz.ttf</file>
         <file alias="fonts/FreeSerifMscore.ttf">../fonts/FreeSerifMscore.ttf</file>
