smufl integration: fix flags
Former-commit-id: e972638237182bcd7c91d09b6c297a28b6520a09

--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -9,7 +9,7 @@
         <file>data/paper5.png</file>
         <file>data/table.svg</file>
 
-        <file alias="fonts/mscore/mscore-20.ttf">../fonts/mscore/mscore-20.ttf</file>
+        <file alias="fonts/mscore/mscore.otf">../fonts/mscore/mscore.otf</file>
         <file alias="/fonts/mscore/glyphnames.json">../fonts/mscore/glyphnames.json</file>
         <file alias="/fonts/mscore/metadata.json">../fonts/mscore/metadata.json</file>
 
