Don't translalate font name "Bravura"
Former-commit-id: 2dbf1b68de481741dc277f527635eab269a8e815

--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -214,7 +214,7 @@
               </item>
               <item>
                <property name="text">
-                <string>Bravura</string>
+                <string notr="true">Bravura</string>
                </property>
               </item>
              </widget>
