--- a/mtest/mtest.qrc
+++ b/mtest/mtest.qrc
@@ -1,10 +1,12 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
    <qresource prefix="/">
-      <file alias="fonts/mscore20.xml">../fonts/mscore20.xml</file>
-      <file alias="fonts/gonville.xml">../fonts/gonville.xml</file>
-      <file alias="fonts/gonville-20.ttf">../fonts/gonville-20.ttf</file>
-      <file alias="fonts/mscore-20.ttf">../fonts/mscore-20.ttf</file>
+      <file alias="fonts/mscore/mscore.otf">../fonts/mscore/mscore.otf</file>
+      <file alias="fonts/mscore/glyphnames.json">../fonts/mscore/glyphnames.json</file>
+      <file alias="fonts/mscore/metadata.json">../fonts/mscore/metadata.json</file>
+      <file alias="fonts/bravura/Bravura.otf">../fonts/bravura/Bravura.otf</file>
+      <file alias="fonts/bravura/glyphnames.json">../fonts/bravura/glyphnames.json</file>
+      <file alias="fonts/bravura/metadata.json">../fonts/bravura/metadata.json</file>
       <file alias="fonts/MuseJazz.ttf">../fonts/MuseJazz.ttf</file>
       <file alias="fonts/FreeSerifMscore.ttf">../fonts/FreeSerifMscore.ttf</file>
       <file alias="fonts/FreeSerifBold.ttf">../fonts/FreeSerifBold.ttf</file>
