--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -10,9 +10,16 @@
       <file>data/paper5.png</file>
 
       <file>data/table.svg</file>
+      
+      <file alias="/fonts/mscore/glyphnames.json">../fonts/mscore/glyphnames.json</file>
+      <file alias="/fonts/mscore/metadata.json">../fonts/mscore/metadata.json</file>
 
-      <file alias="fonts/mscore20.xml">../fonts/mscore20.xml</file>
-      <file alias="fonts/gonville.xml">../fonts/gonville.xml</file>
+      <file alias="/fonts/gonville/glyphnames.json">../fonts/gonville/glyphnames.json</file>
+      <file alias="/fonts/gonville/metadata.json">../fonts/gonville/metadata.json</file>
+
+      <file alias="fonts/bravura/glyphnames.json">../fonts/bravura/glyphnames.json</file>
+      <file alias="fonts/bravura/metadata.json">../fonts/bravura/metadata.json</file>
+      
       <file alias="fonts/fonts_figuredbass.xml">../fonts/fonts_figuredbass.xml</file>
       <file alias="fonts/fonts_tablature.xml">../fonts/fonts_tablature.xml</file>
 
