Time Sig Props dlg box layout
Added icons to display time syg symbols and changed layout to two columns of "Values" and "Appearance".


Former-commit-id: 7d30572c16a1fcbddd4db05cd0d6c7b1a7834e4c

--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -138,6 +138,17 @@
       <file>data/icons/go-previous.svg</file>
       <file>data/icons/help-contents.svg</file>
       <file>data/icons/view-refresh.svg</file>
+      <file>data/icons/timesig_allabreve.svg</file>
+      <file>data/icons/timesig_common.svg</file>
+      <file>data/icons/timesig_prolatio01.svg</file>
+      <file>data/icons/timesig_prolatio02.svg</file>
+      <file>data/icons/timesig_prolatio03.svg</file>
+      <file>data/icons/timesig_prolatio04.svg</file>
+      <file>data/icons/timesig_prolatio05.svg</file>
+      <file>data/icons/timesig_prolatio07.svg</file>
+      <file>data/icons/timesig_prolatio08.svg</file>
+      <file>data/icons/timesig_prolatio10.svg</file>
+      <file>data/icons/timesig_prolatio11.svg</file>
 
       <file>schema/license.html</file>
       <file>schema/musicxml.xsd</file>
